exception handling and insert test data to product service db