@@ -6,7 +6,6 @@ import org.apache.commons.lang.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -51,7 +50,7 @@ public class CustomerService {
         return customerRepository.findAll()
                 .stream()
                 .map(customerMapper::fromCustomer)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Boolean existsById(String customerId) {
